<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Laos Airways</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">International</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="round_trip">Round Trip</string>
    <string name="one_way">One Way</string>
    <string name="leave_from">-- Leaving From --</string>
    <string name="going_to">-- Going To --</string>
    <string name="all">All</string>
    <string name="economy">Economy</string>
    <string name="business">Business</string>
    <string name="adult">Adults \n(12+ y)</string>
    <string name="children">Children \n(2–1 y)</string>
    <string name="infants">Infants \n(0–23 M)</string>
    <string name="search">SEARCH</string>
    <string name="invalid_date">Invalid date!</string>
    <string name="invalid_date_past_date">Date less than now</string>
    <string name="invalid_date_less_than">Date must be greater</string>
    <string name="title_activity_all_flight">AllFlightActivity</string>
    <string name="searching">Searching . . .</string>
    <string name="title_activity_flight_detail">Detail</string>
    <string name="spn_adult">-- Adult --</string>
    <string name="spn_child">-- Children --</string>
    <string name="spn_infant">-- Infant --</string>
    <string name="KEY_IS_FIRST_USE">is_first_use</string>
    <string name="pref_header_History">HISTORY</string>
    <string name="action_share">Share</string>
    <string name="content_authority">nokieng.gdgvientiane.org.laoair</string>
    <string name="sync_account_type">nokieng.gdgvientiane.org</string>
    <string name="action_clear_history">Clear History</string>
    <string name="dialog_title_choose_action">Choose an action</string>
    <string name="no_history_yet">No history yet</string>

</resources>
