<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="nokieng.gdgvientiane.org.laoair.FragmentDomestic">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_brown"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_shape_white"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin">

                <RadioGroup
                    android:id="@+id/rg_domestic_way"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/shape_line"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_domestic_round_trip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp5"
                        android:checked="true"
                        android:text="@string/round_trip"
                        android:textColor="@color/secondary_text" />

                    <RadioButton
                        android:id="@+id/rb_domestic_one_way"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp5"
                        android:text="@string/one_way"
                        android:textColor="@color/secondary_text" />
                </RadioGroup>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dp5"
                    android:paddingTop="@dimen/dp5"
                    android:text="@string/leave_from"
                    android:textColor="@color/primary_text" />

                <Spinner
                    android:id="@+id/spn_domestic_leave_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_line"
                    android:prompt="@string/leave_from"
                    android:spinnerMode="dialog" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dp5"
                    android:paddingTop="@dimen/dp5"
                    android:text="@string/going_to"
                    android:textColor="@color/primary_text" />

                <Spinner
                    android:id="@+id/spn_domestic_go_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_line"
                    android:prompt="@string/leave_from"
                    android:spinnerMode="dialog" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp5"
                        android:layout_marginRight="@dimen/dp5"
                        android:layout_marginTop="@dimen/dp5"
                        android:layout_weight="1"
                        android:background="@drawable/shape_line"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/dp5">

                        <TextView
                            android:id="@+id/txt_domestic_date_from"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/dp5"
                            android:paddingTop="@dimen/dp5"
                            android:textColor="@color/primary_text" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:gravity="right"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_launcher" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp5"
                        android:layout_marginLeft="@dimen/dp5"
                        android:layout_marginTop="@dimen/dp5"
                        android:layout_weight="1"
                        android:background="@drawable/shape_line"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/dp5"
                        android:id="@+id/layout_domestic_date_to">

                        <TextView
                            android:id="@+id/txt_domestic_date_to"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/dp5"
                            android:paddingTop="@dimen/dp5"
                            android:textColor="@color/primary_text" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:gravity="right"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_launcher" />
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/rg_domestic_trip_type"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@drawable/shape_line"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_domestic_type_all"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp5"
                            android:checked="true"
                            android:text="@string/all"
                            android:textColor="@color/secondary_text" />

                        <RadioButton
                            android:id="@+id/rb_domestic_type_economy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp5"
                            android:text="@string/economy"
                            android:textColor="@color/secondary_text" />

                        <RadioButton
                            android:id="@+id/rb_domestic_type_business"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp5"
                            android:text="@string/business"
                            android:textColor="@color/secondary_text" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/dp5"
                            android:paddingTop="@dimen/dp5"
                            android:text="@string/adult"
                            android:textColor="@color/secondary_text" />

                        <Spinner
                            android:id="@+id/spn_domestic_adult"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shape_line"
                            android:prompt="@string/leave_from"
                            android:spinnerMode="dialog" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/dp5"
                            android:paddingTop="@dimen/dp5"
                            android:text="@string/children"
                            android:textColor="@color/secondary_text" />

                        <Spinner
                            android:id="@+id/spn_domestic_children"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shape_line"
                            android:prompt="@string/leave_from"
                            android:spinnerMode="dialog" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="@dimen/dp5"
                            android:paddingTop="@dimen/dp5"
                            android:text="@string/infants"
                            android:textColor="@color/secondary_text" />

                        <Spinner
                            android:id="@+id/spn_domestic_infants"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/shape_line"
                            android:prompt="@string/leave_from"
                            android:spinnerMode="dialog" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp5"
                    android:layout_marginTop="@dimen/dp10"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_domestic_search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_bg_selector"
                        android:singleLine="true"
                        android:text="@string/search"
                        android:textAppearance="?android:attr/textAppearanceSmallInverse"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</LinearLayout>
